fix flex wrap

--- a/src/components/Experience/ExperienceDetails.module.css
+++ b/src/components/Experience/ExperienceDetails.module.css
@@ -1,5 +1,4 @@
 .container {
-	max-width: 45%;
 	height: auto;
 	border-radius: 1rem;
 	border-radius: 8px;
